Fixed product list spacing

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -509,7 +509,7 @@ footer {
 }
 
 .product-card > img {
-    position: absolute;
+    position: relative;
     height: 200px;
     width: 220px;
     top: 0;
@@ -517,12 +517,12 @@ footer {
 }
 
 .product-info {
-    position: absolute;
+    position: relative;
     bottom: 0;
     height: auto;
     display: flex;
     flex-direction: column;
-    padding: 0.8rem;
+    padding: 0.1rem 0.8rem 0 0.8rem;
 }
 
 .product-info > p {
